--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--  script  -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
+
+    <!-- styles -->
+    <link rel="stylesheet" href="css/main.css">
+
     <title>Document</title>
 </head>
 <body>
 <!-- header -->
-<div id="header"">
-    <nav id="nav-bar"></nav>
-    <div id="header-img"></div>
-</div>
+<header id="header">
+    <!-- nav bar -->
+    <nav id="nav-bar">
+        <div class="nav-header">
+            <div class="nav-title">
+                <img id="header-img" src="#0">
+            </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
+        <input type="checkbox" id="nav-check">
+        <div class="nav-links">
+            <a href="#home" class="nav-link">Home</a>
+            <a href="#features" class="nav-link">Features</a>
+            <a href="#customers" class="nav-link">Customer Stories</a>
+            <a href="#about" class="nav-link">About Us</a>
+        </div>
+    </nav>
+</header>
 <!-- main content-->
 <div class="main-content">
+    <a name="home">
     <!-- main content-->
     <div class="tagline-content">
-        <h1>Company Tagline</h1>
-        <p>Lorem ipsum.</p>
+        <h1>Where Work Happens</h1>
+        <p>When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.</p>
     </div>
-    <div class="form-hero">
+    <div class="main-content">
         <!-- submission form -->
-        <form action="">
-            <input type="text" placeholder="Your Email">
-            <button type="submit"></button>
+        <form id="form" action="https://www.freecodecamp.com/email-submit" target="_self">
+            <input id="email" type="email" placeholder="Your Email">
+            <input id="submit" type="submit" value="GET STARTED">
         </form>
         <!-- hero image -->
         <div class=image-container>
@@ -31,33 +61,45 @@
         </div>
     </div>
     <!-- feature content -->
-    <div class="feature-container">
-        <h2>Features</h2>
+    <div class="main-content">
+        <div class="section-header">
+            <h2>The hub for your team and your work</h2>
+            <h3 class="transient">Slack is a place where your team comes together to collaborate, important information can be found by the right people, and your tools pipe in information when and where you need it.</h3>
+        </div>
         <!-- feature items -->
-        <div class="feature-content">
-           <img src="" alt="">
-           <h3>Feature A</h3>
-           <p>Lorem ipsum.</p>
-        </div>
-        <div class="feature-content">
+        <div class="feature-container">
+            <div class="feature-item">
             <img src="" alt="">
-            <h3>Feature A</h3>
-            <p>Lorem ipsum.</p>
+            <h3>Channels</h3>
+            <p>Communication in Slack happens in channels, organized by project, topic, team, or whatever makes sense for you.</p>
+            </div>
+            <div class="feature-item">
+                <img src="" alt="">
+                <h3>Search</h3>
+                <p>LConversations in Slack are searchable by everyone, so you can tap into company knowledge and find information when you need it.</p>
+            </div>
+            <div class="feature-item">
+                <img src="" alt="">
+                <h3>Integrations</h3>
+                <p>Slack works with the tools and services you already use every day. Pipe in information or take action without leaving Slack.</p>
+            </div>
+            <div class="feature-item">
+                <img src="" alt="">
+                <h3>Integrations</h3>
+                <p>Slack works with the tools and services you already use every day. Pipe in information or take action without leaving Slack.</p>
+            </div>
         </div>
-        <div class="feature-content">
-            <img src="" alt="">
-            <h3>Feature A</h3>
-            <p>Lorem ipsum.</p>
-        </div>
-        <a href="#0">Learn more about our features.</a>
     </div>
+    <a href="#0">Learn more about our features.</a>
     <!-- case study content -->
-    <div class="case-study-content">
-        <h2>Case Studies</h2>
+    <div class="main-content">
+        <a name="customers">
+        <h2>You're in good company</h2>
+        <p>Millions of people around the world have already made Slack the place where their work happens.</p>
         <!-- case study items -->
         <div class="case-item">
-            <h3>Customer</h3>
-            <h1>Benefit</h1>
+            <h3>LVMH/Benefit Cosmetics</h3>
+            <h1>Beautifying the world with a wink and a smile (and Slack).</h1>
             <div class="img-div">
                 <img src="" alt="">
             </div>
@@ -67,19 +109,8 @@
             </div>
         </div>
         <div class="case-item">
-            <h3>Customer</h3>
-            <h1>Benefit</h1>
-            <div class="img-div">
-                <img src="" alt="">
-            </div>
-            <div class="case-footer">
-                <h2>READ STORY</h2>
-                <img src="#0" alt="">
-            </div>
-        </div>
-        <div class="case-item">
-            <h3>Customer</h3>
-            <h1>Benefit</h1>
+            <h3>Away</h3>
+            <h1>Bringing the ideal suitcase to market with Slack.</h1>
             <div class="img-div">
                 <img src="" alt="">
             </div>
@@ -89,66 +120,67 @@
             </div>
         </div>
         <!-- logos -->
-        <div class="logo-container">
-            <div class="logo-item">
-                <img src="#0" alt="">
+    <div class="main-content">
+        <div class="logo-item">
+            <img src="#0" alt="">
+        </div>
+        <div class="logo-item">
+            <img src="#0" alt="">
+        </div>
+        <div class="logo-item">
+            <img src="#0" alt="">
+        </div>
+    </div>
+    <!-- get started content -->
+    <div class="main-content">
+        <h1>Try X with your team for free</h1>
+        <input id="submit-get-started" type="submit" value="GET STARTED">
+    </div>
+    <footer>
+        <a name="about">
+        <!-- company info nav -->
+        <div class="footer-nav">
+            <p>COMPANY</p>
+            <ul>
+                <li>About Us</li>
+                <li>Careers</li>
+                <li>Blog</li>
+                <li>Press</li>
+            </ul>
+        </div>
+        <div class="footer-nav">
+            <p>PRODUCT</p>
+            <ul>
+                <li>Customer Stories</li>
+                <li>Pricing</li>
+                <li>Security</li>
+                <li>Why Company?</li>
+            </ul>
+        </div>
+        <div class="footer-nav">
+            <p>RESOURCES</p>
+            <ul>
+                <li>Help Center</li>
+                <li>Partners</li>
+                <li>API</li>
+                <li>Download</li>
+            </ul>
+        </div>
+        <!-- social content -->
+        <div class="social-content">
+            <div class="t&c-nav">
+                <p>Status</p>
+                <p>Privacy & Terms</p>
+                <p>Contact Us</p>
             </div>
-            <div class="logo-item">
+            <div class="social-nav">
                 <img src="#0" alt="">
-            </div>
-            <div class="logo-item">
+                <img src="#0" alt="">
+                <img src="#0" alt="">
                 <img src="#0" alt="">
             </div>
         </div>
-        <!-- get started content -->
-        <div class="get-started-container">
-            <h1>Try X with your team for free</h1>
-            <button type="submit">GET STARTED</button>
-        </div>
-        <footer>
-            <!-- company info nav -->
-            <div class="footer-nav">
-                <p>COMPANY</p>
-                <ul>
-                    <li>About Us</li>
-                    <li>Careers</li>
-                    <li>Blog</li>
-                    <li>Press</li>
-                </ul>
-            </div>
-            <div class="footer-nav">
-                <p>PRODUCT</p>
-                <ul>
-                    <li>Customer Stories</li>
-                    <li>Pricing</li>
-                    <li>Security</li>
-                    <li>Why Company?</li>
-                </ul>
-            </div>
-            <div class="footer-nav">
-                <p>RESOURCES</p>
-                <ul>
-                    <li>Help Center</li>
-                    <li>Partners</li>
-                    <li>API</li>
-                    <li>Download</li>
-                </ul>
-            </div>
-            <!-- social content -->
-            <div class="social-content">
-                <div class="t&c-nav">
-                    <p>Status</p>
-                    <p>Privacy & Terms</p>
-                    <p>Contact Us</p>
-                </div>
-                <div class="social-nav">
-                    <img src="#0" alt="">
-                    <img src="#0" alt="">
-                    <img src="#0" alt="">
-                    <img src="#0" alt="">
-                </div>
-            </div>
-        </footer>
+    </footer>
     </div>
 </div>
 </body>
