added sticky nav

--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -21,24 +21,13 @@
     <header id="header">
         <!-- nav bar -->
         <nav id="nav-bar">
-            <div class="nav-header">
-                <div class="nav-title">
-                    <img id="header-img" src="#0">
-                </div>
+            <div class="nav-logo">
+                <img id="header-img" src="#0">
             </div>
-            <div class="nav-btn">
-                <label for="nav-check">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-            </div>
-            <input type="checkbox" id="nav-check">
             <div class="nav-links">
-                <a href="#home" class="nav-link">Home</a>
-                <a href="#features" class="nav-link">Features</a>
-                <a href="#customers" class="nav-link">Customer Stories</a>
-                <a href="#about" class="nav-link">About Us</a>
+                <div class="link-item"><a href="#features" class="nav-link">Features</a></div>
+                <div class="link-item"><a href="#customers" class="nav-link">Customer Stories</a></div>
+                <div class="link-item"><a href="#about" class="nav-link">About Us</a></div>
             </div>
         </nav>
     </header>
@@ -61,12 +50,10 @@
             <div class=image-container>
                 <img src="" alt="">
             </div>
-        </div>
-        <!-- features -->
-        <!-- sub content text -->
-        
+        </div>        
         <!-- feature content -->
         <div class="feature-content">
+            <a name="features"></a>
             <div class="sub-content centered-content ">
                 <h2 class="styled-heading">The hub for your team and your work</h2>
                 <p class="transient">Slack is a place where your team comes together to collaborate, important information can be found by the right people, and your tools pipe in information when and where you need it.</p>
