--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -20,11 +20,11 @@
     <!-- header -->
     <header id="header">
         <!-- nav bar -->
-        <nav id="nav-bar">
-            <div class="nav-logo">
+        <nav id="nav-bar" class="nav nav--header header flex flex--no-wrap">
+            <div class="header__logo">
                 <img id="header-img" src="#0">
             </div>
-            <div class="nav-links">
+            <div class="header__links flex flex--no-wrap">
                 <div class="link-item"><a href="#features" class="nav-link">Features</a></div>
                 <div class="link-item"><a href="#customers" class="nav-link">Customer Stories</a></div>
                 <div class="link-item"><a href="#about" class="nav-link">About Us</a></div>
@@ -58,7 +58,7 @@
                 <h2 class="styled-heading">The hub for your team and your work</h2>
                 <p class="transient">Slack is a place where your team comes together to collaborate, important information can be found by the right people, and your tools pipe in information when and where you need it.</p>
             </div>
-            <div class="feature-flex-container">
+            <div class="flex flex--wrap">
                 <!-- feature items -->
                 <div class="feature-flex-item">
                     <img src="" alt="">
@@ -83,7 +83,7 @@
                 <h2 class="styled-heading">You're in good company</h2>
                 <p>Millions of people around the world have already made Slack the place where their work happens.</p>
             </div>
-            <div class="case-flex-container">
+            <div class="flex flex--wrap">
                 <!-- case study items -->
                 <div class="case-flex-item">
                     <h3>LVMH/Benefit Cosmetics</h3>
@@ -145,17 +145,15 @@
             <div>Background made by <a href="https://svgbackgrounds.com/" title="SVGBackgrounds">SVGBackgrounds</a> from <a href="https://svgbackgrounds.com/" title="SVGBackgrounds">www.svgbackgrounds.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 4.0 BY</a></div>    
         </div>
         <!-- misc content -->
-        <div class="misc-content">
-            <div class="misc-container">
-                <div class="misc-item">
-                    <a href="#0" class="bolded">Status</a>
-                </div>
-                <div class="misc-item">
-                    <a href="#0" class="bolded">Privacy & Terms</a>
-                </div>
-                <div class="misc-item">
-                    <a href="#0" class="bolded">Contact Us</a>
-                </div>
+        <div class="footer__link flex flex--no-wrap">
+            <div class="footer__link__item">
+                <a href="#0" class="bolded">Status</a>
+            </div>
+            <div class="footer__link__item">
+                <a href="#0" class="bolded">Privacy & Terms</a>
+            </div>
+            <div class="footer__link__item">
+                <a href="#0" class="bolded">Contact Us</a>
             </div>
         </div>
     </footer>
